src/core/generator/json/snapshots/gqlforge__core__generator__json__operation_generator__test__append_field_if_operation_type_exists.snap
---
source: src/core/generator/json/operation_generator.rs
expression: config.to_sdl()
---

type Query {
  post: Int
  postComments(postId: Int): T44 @http(url: "https://jsonplaceholder.typicode.com/comments", query: [{key: "postId", value: "{{.args.postId}}"}])
}
