src/core/generator/json/snapshots/gqlforge__core__generator__json__operation_generator__test__query.snap
---
source: src/core/generator/json/operation_generator.rs
expression: config.to_sdl()
---

type Query {
  postComments(postId: Int): T44 @http(url: "https://jsonplaceholder.typicode.com/comments", query: [{key: "postId", value: "{{.args.postId}}"}])
}
